selfhost/test/parser/bindingdecl_error_bad_ident.out
Error at %FILE_NAME%:1:5
Unexpected token 'int', expected 'identifier':
  |  val 123
         ^